--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env
 
 # vercel
 .vercel
@@ -37,3 +37,6 @@ next-env.d.ts
 
 # vscode
 .vscode
+
+# prisma
+prisma/migrations
