--- a/biome.json
+++ b/biome.json
@@ -20,8 +20,13 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true,
+			"correctness": {
+				"noUnusedVariables": "error",
+				"useHookAtTopLevel": "error"
+			},
 			"style": {
-				"noInferrableTypes": "off"
+				"noNegationElse": "error",
+				"useBlockStatements": "error"
 			}
 		}
 	},
