--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/uuid": "^10.0.0",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.11",
+		"lefthook": "^1.7.15",
 		"postcss": "^8",
 		"prisma": "^5.19.1",
 		"tailwindcss": "^3.4.1",
