--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-  "name": "todo-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.19.1",
-    "next": "14.2.11",
-    "react": "^18",
-    "react-dom": "^18",
-    "uuid": "^10.0.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.9.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/uuid": "^10.0.0",
-    "postcss": "^8",
-    "prisma": "^5.19.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "todo-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"check": "biome check ./src && eslint './src/**/*.{js,jsx,ts,tsx}'",
+		"check:fix": "biome check --write ./src && eslint './src/**/*.{js,jsx,ts,tsx}' --fix"
+	},
+	"dependencies": {
+		"@prisma/client": "^5.19.1",
+		"next": "14.2.11",
+		"react": "^18",
+		"react-dom": "^18",
+		"uuid": "^10.0.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.0",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@types/uuid": "^10.0.0",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.11",
+		"lefthook": "^1.7.15",
+		"postcss": "^8",
+		"prisma": "^5.19.1",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
